# mod_turbotab

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  cli.py  config.py  exceptions.py  pyproject.toml  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  roadmap_spec.md
.github/workflows/: ci.yml  close-prs.yml  publish.yml
agents/: __init__.py  capacity.py  shrinkage.py
calculations/: __init__.py  erlang.py  multi_skill.py  traffic.py
coming_soon/: intraday_simulation.md  multi_skill_erlang_c.md  occupancy_cap.md  shrinkage_absenteeism.md
queues/: __init__.py  queues.py
simulation/: __init__.py  intraday.py
skills/: README.md
skills/mod-turbotab/: SKILL.md
tests/: __init__.py  test_cli.py  test_intraday.py  test_multi_skill.py  test_occupancy.py  test_shrinkage.py
trunks/: __init__.py  trunks.py
